--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #AC8968;
+  background-color: #e9e9e7;
   overflow-x: hidden;
   width: 100%;
 
